# grading-tool

./: .gitignore  README.md  backend.py  config_handler.py  configure.json  configure.py  file_operation.py  main.py  pyproject.toml
