[project]
name = "grading-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "stanlet2000",email = "stanlet2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "inquirerpy (>=0.3.4,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
